# Smart-HSV-FeedmillTarlac

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
api/: main.py  preview.py
config/: settings.py
core/: alert_manager.py  annotator.py  cooldown_manager.py  detector.py  gemini_client.py  stream_reader.py  zone_manager.py
dashboard/: next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: RiskBadge.tsx  Sidebar.tsx
dashboard/app/events/: page.tsx
dashboard/app/events/[id]/: page.tsx
dashboard/app/lib/: api.ts
dashboard/app/live/: page.tsx
dashboard/app/stats/: page.tsx
dashboard/mnt/user-data/outputs/safety-vision/dashboard/app/events/: page.tsx
dashboard/mnt/user-data/outputs/safety-vision/dashboard/app/events/[id]/: page.tsx
dashboard/mnt/user-data/outputs/safety-vision/dashboard/app/live/: page.tsx
db/: crud.py  database.py  models.py
deploy/: hsv-backend.service  hsv-dashboard.service
pipeline/: event_saver.py  frame_processor.py  periodic_scanner.py
sites/: base_site.py
sites/robot_zone/: config.yaml  site.py
sites/robot_zone/prompts/: prompt_env.py  prompt_person.py
tests/: test_alert.py  test_cooldown.py  test_db.py  test_gemini.py
tools/: zone_calibrator.py
