[project]
name = "hsv-vision"
version = "1.0.0"
description = "Factory Safety Vision System — CCTV-based AI safety monitoring"
requires-python = ">=3.10"

dependencies = [
    # ── AI / Vision ───────────────────────────────────────────
    "ultralytics>=8.2.103",
    "google-generativeai==0.7.2",
    "opencv-python>=4.10.0",

    # ── Geometry ──────────────────────────────────────────────
    "shapely==2.0.6",

    # ── Config / Settings ─────────────────────────────────────
    "pydantic-settings==2.3.4",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",

    # ── Queue / Cache ─────────────────────────────────────────
    "redis==5.0.8",
    "apscheduler==3.10.4",

    # ── API ───────────────────────────────────────────────────
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.3",
    "websockets==12.0",

    # ── Database ──────────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",

    # ── Alert ─────────────────────────────────────────────────
    "python-telegram-bot==21.4",

    # ── Utilities ─────────────────────────────────────────────
    "numpy==1.26.4",
    "pillow==10.4.0",
    "aiofiles==24.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = false          # app ไม่ใช่ library — ไม่ต้อง build wheel

# ──────────────────────────────────────────────────────────────────
# IMPORTANT — Jetson Orin only:
# ultralytics pulls in `torch` as a transitive dependency. By default
# uv resolves it from PyPI, which ships a generic CUDA 13.0 build that
# requires a newer NVIDIA driver than JetPack provides (Jetson is on
# CUDA 12.6 / JetPack 6.x). That mismatch silently disables GPU support
# (torch.cuda.is_available() returns False with no hard error).
#
# This [tool.uv.sources] entry pins torch + torchvision to NVIDIA's
# official JetPack wheel index instead, so `uv sync` always installs
# the correct CUDA-12.6-compatible build for this hardware.
#
# On non-Jetson machines (dev PC), this index simply won't have a
# matching wheel and uv falls back to PyPI automatically — safe either way.
# ──────────────────────────────────────────────────────────────────
[tool.uv.sources]
torch = { index = "jetson-pytorch", marker = "platform_machine == 'aarch64'" }
torchvision = { index = "jetson-pytorch", marker = "platform_machine == 'aarch64'" }

# Jetson AI Lab community-maintained mirror — provides prebuilt wheels for
# multiple Python versions (cp310, cp312...) matched to JetPack 6.x / CUDA 12.6,
# unlike NVIDIA's own redist index which only ships cp310 wheels.
[[tool.uv.index]]
name = "jetson-pytorch"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
explicit = true